--- a/css/style.css
+++ b/css/style.css
@@ -478,21 +478,21 @@ p {
 #page-content {
   background-color: #fafafa;
 }
-#page-content section:nth-of-type(2),
-#page-content section:nth-of-type(3),
-#page-content section:nth-of-type(4) {
+#page-content #about,
+#page-content #demo,
+#page-content #exemple {
   padding: 60px 0px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(2),
-  #page-content section:nth-of-type(3),
-  #page-content section:nth-of-type(4) {
+  #page-content #about,
+  #page-content #demo,
+  #page-content #exemple {
     padding: 40px 32px;
   }
 }
-#page-content section:nth-of-type(2) article,
-#page-content section:nth-of-type(3) article,
-#page-content section:nth-of-type(4) article {
+#page-content #about article,
+#page-content #demo article,
+#page-content #exemple article {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -504,8 +504,8 @@ p {
           align-items: center;
   gap: 100px;
 }
-#page-content section:nth-of-type(5) article,
-#page-content section:nth-of-type(6) article {
+#page-content #blog article,
+#page-content #appli article {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -523,28 +523,28 @@ p {
   gap: 40px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(5) article,
-  #page-content section:nth-of-type(6) article {
+  #page-content #blog article,
+  #page-content #appli article {
     padding: 40px 32px;
   }
 }
-#page-content section:first-of-type {
+#page-content #page {
   padding: 60px 72px;
   gap: 58px;
 }
 @media (max-width: 600px) {
-  #page-content section:first-of-type {
+  #page-content #page {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     padding: 40px 32px;
   }
-  #page-content section:first-of-type h2 {
+  #page-content #page h2 {
     text-align: center;
   }
 }
-#page-content section:first-of-type article {
+#page-content #page article {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -555,11 +555,11 @@ p {
   padding: 0px 40px;
   gap: 40px;
 }
-#page-content section:nth-of-type(2) {
+#page-content #about {
   background-color: #ffffff;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(2) article {
+  #page-content #about article {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -567,28 +567,28 @@ p {
     gap: 60px;
   }
 }
-#page-content section:nth-of-type(2) article > div:first-of-type {
+#page-content #about article > div:first-of-type {
   position: relative;
   width: 460px;
   height: 320px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(2) article > div:first-of-type {
+  #page-content #about article > div:first-of-type {
     width: 384px;
     height: 269px;
   }
 }
-#page-content section:nth-of-type(2) article > div:first-of-type > img {
+#page-content #about article > div:first-of-type > img {
   width: 460px;
   height: 320px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(2) article > div:first-of-type > img {
+  #page-content #about article > div:first-of-type > img {
     width: 384px;
     height: 269px;
   }
 }
-#page-content section:nth-of-type(2) article > div:last-of-type {
+#page-content #about article > div:last-of-type {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -606,32 +606,32 @@ p {
   width: 460px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(2) article > div:last-of-type {
+  #page-content #about article > div:last-of-type {
     width: auto;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
 }
-#page-content section:nth-of-type(2) article > div:last-of-type p {
+#page-content #about article > div:last-of-type p {
   font-size: 1.13rem;
 }
-#page-content section:nth-of-type(3) article img {
+#page-content #demo article img {
   width: 460px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(3) article {
+  #page-content #demo article {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     gap: 50px;
   }
-  #page-content section:nth-of-type(3) article img {
+  #page-content #demo article img {
     width: 375px;
   }
 }
-#page-content section:nth-of-type(3) article div {
+#page-content #demo article div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -649,7 +649,7 @@ p {
   width: 460px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(3) article div {
+  #page-content #demo article div {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
@@ -657,26 +657,26 @@ p {
     gap: 20px;
   }
 }
-#page-content section:nth-of-type(3) article div h1 {
+#page-content #demo article div h1 {
   -ms-flex-item-align: stretch;
       align-self: stretch;
 }
-#page-content section:nth-of-type(3) article div p {
+#page-content #demo article div p {
   font-size: 1.13rem;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(4) article {
+  #page-content #exemple article {
     gap: 60px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  #page-content section:nth-of-type(4) article img {
+  #page-content #exemple article img {
     display: none;
   }
 }
-#page-content section:nth-of-type(4) article > div {
+#page-content #exemple article > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -694,23 +694,23 @@ p {
   width: 460px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(4) article > div {
+  #page-content #exemple article > div {
     width: auto;
   }
 }
-#page-content section:nth-of-type(4) article > div > h1 {
+#page-content #exemple article > div > h1 {
   -ms-flex-item-align: stretch;
       align-self: stretch;
 }
-#page-content section:nth-of-type(4) article > div > p {
+#page-content #exemple article > div > p {
   font-size: 1.13rem;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(4) article > div > p {
+  #page-content #exemple article > div > p {
     height: auto;
   }
 }
-#page-content section:nth-of-type(4) article > div > div {
+#page-content #exemple article > div > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -727,7 +727,7 @@ p {
   gap: 21px;
   width: 330px;
 }
-#page-content section:nth-of-type(4) article > div > div > div {
+#page-content #exemple article > div > div > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -740,19 +740,19 @@ p {
           align-items: center;
   gap: 11px;
 }
-#page-content section:nth-of-type(4) article > div > div > div p:first-of-type {
+#page-content #exemple article > div > div > div p:first-of-type {
   font-size: 24px;
   font-weight: 700;
 }
-#page-content section:nth-of-type(4) article > div > div > div p {
+#page-content #exemple article > div > div > div p {
   font-size: 1.13rem;
   line-height: 19px;
 }
-#page-content section:nth-of-type(5) {
+#page-content #blog {
   background-color: #2b59ff;
   color: white;
 }
-#page-content section:nth-of-type(5) article > div {
+#page-content #blog article > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -769,14 +769,14 @@ p {
   gap: 79px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(5) article > div {
+  #page-content #blog article > div {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
 }
-#page-content section:nth-of-type(5) article > div > div {
+#page-content #blog article > div > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -795,16 +795,16 @@ p {
   margin: 0 auto;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(5) article > div > div {
+  #page-content #blog article > div > div {
     width: auto;
   }
 }
-#page-content section:nth-of-type(5) article > div > div > p {
+#page-content #blog article > div > div > p {
   font-weight: 700;
   font-size: 1.5rem;
   line-height: 32px;
 }
-#page-content section:nth-of-type(5) article > div > div > div {
+#page-content #blog article > div > div > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -817,11 +817,11 @@ p {
           align-items: flex-start;
   gap: 19px;
 }
-#page-content section:nth-of-type(5) article > div > div > div > img {
+#page-content #blog article > div > div > div > img {
   width: 32px;
   height: 32px;
 }
-#page-content section:nth-of-type(5) article > div > div > div > div {
+#page-content #blog article > div > div > div > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -834,20 +834,21 @@ p {
           align-items: flex-start;
   gap: 6.3px;
 }
-#page-content section:nth-of-type(5) article > div > div > div > div > p {
+#page-content #blog article > div > div > div > div > p {
   font-size: 13.5px;
   line-height: 1rem;
 }
-#page-content section:nth-of-type(6) article h2 {
+#page-content #appli article h2 {
   width: 519px;
 }
 @media (max-width: 600px) {
-  #page-content section:nth-of-type(6) article h2 {
+  #page-content #appli article h2 {
     width: auto;
   }
 }
 
 footer {
+  background-color: #fafafa;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
